# AndroidOpenglesExamples

./: gradle.properties  settings.gradle
HelloTriangle/: .gitignore  build.gradle
HelloTriangle/src/androidTest/java/rqg/fantasy/androidopenglexamples/: ExampleInstrumentedTest.java
HelloTriangle/src/main/: AndroidManifest.xml
HelloTriangle/src/main/cpp/: CMakeLists.txt  Hello_Triangle.c  RenderSelf.cpp  RenderSelf.h  RendererES3.cpp  gles3jni.cpp  gles3jni.h  glesView.cpp  native-lib.cpp
HelloTriangle/src/main/glsl/: triangle.fs.glsl  triangle.vs.glsl
HelloTriangle/src/main/java/rqg/fantasy/androidopenglexamples/: GLES3JniView.java  MainActivity.java
HelloTriangle/src/main/res/layout/: activity_main.xml
HelloTriangle/src/main/res/values/: strings.xml
HelloTriangle/src/test/java/rqg/fantasy/androidopenglexamples/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativeview/: build.gradle
nativeview/src/androidTest/java/rqg/fantasy/nativeview/: ExampleInstrumentedTest.java
nativeview/src/main/: AndroidManifest.xml
nativeview/src/main/assets/: instance.fs.glsl  instance.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
nativeview/src/main/cpp/: CMakeLists.txt  EGLWrapper.cpp  EGLWrapper.h  EglCommonDefine.h  GlThread.cpp  GlThread.h  Renderer.cpp  Renderer.h  nativeGlesView.cpp
nativeview/src/main/cpp/renderer/: InstanceRenderer.cpp  InstanceRenderer.h  PolygonOffsetRenderer.cpp  PolygonOffsetRenderer.h  TriangleRenderer.cpp  TriangleRenderer.h
nativeview/src/main/java/rqg/fantasy/nativeview/: MainActivity.java  NativeGLESView.java
nativeview/src/main/res/layout/: activity_main.xml
nativeview/src/main/res/values/: strings.xml
nativeview/src/test/java/rqg/fantasy/nativeview/: ExampleUnitTest.java
